styx-format/src/snapshots/styx_format__value_format__tests__edge_case_01_schema_declaration_blank_line.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
@ schema.styx

name test
port 8080
