styx-format/src/snapshots/styx_format__value_format__tests__edge_case_02_nested_multiline_objects.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
name myapp
server {
    host localhost
    port 8080
}
