styx-format/src/snapshots/styx_format__value_format__tests__edge_case_03_deeply_nested_multiline.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
name myapp
server {
    host localhost
    tls {
        cert /path/to/cert
        key /path/to/key
    }
}
