styx-format/src/snapshots/styx_format__value_format__tests__edge_case_04_mixed_inline_multiline.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
name point
coords {x 1, y 2}
