styx-format/src/snapshots/styx_format__value_format__tests__edge_case_05_tagged_multiline_object.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
type @object{
    name @string
    age @int
}
