styx-format/src/snapshots/styx_format__value_format__tests__edge_case_07_schema_structure.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
meta {
    id https://example.com/schema
    version 1.0
}
schema {
    @ @object{
        name @string
        port @int
    }
}
