styx-format/src/snapshots/styx_format__value_format__tests__edge_case_08_optional_types.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
required @string
optional @optional("@bool")
