styx-format/src/snapshots/styx_format__value_format__tests__edge_case_11_sequence_of_objects.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
users ({name Alice} {name Bob})
