styx-format/src/snapshots/styx_format__value_format__tests__edge_case_12_quoted_strings.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
message "\"Hello, World!\""
path "/path/with spaces/file.txt"
