styx-format/src/snapshots/styx_format__value_format__tests__edge_case_13_quoted_keys.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
normal-key value1
"key with spaces" value2
123numeric value3
