styx-format/src/snapshots/styx_format__value_format__tests__edge_case_14_schema_declaration.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
@schema first.styx

name test
