styx-format/src/snapshots/styx_format__value_format__tests__edge_case_17_nested_doc_comments.snap
---
source: crates/styx-format/src/value_format.rs
expression: result
---
/// Server configuration
server {
    /// The server hostname
    host localhost
    /// The server port
    port 8080
}
